test/TestPhases/typechecker/invalid/singletonCallinCond.blc
@[CFunction (binding ="c_f", header = "c_f.h")]
extern singleton function f () returns bool

@[EntryPoint]
activity Main ()
    await f() // singleton in condition -> non-determinism
end